Changed website's title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dog Dating Website</title>
+  <title>Doggo Date</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
