--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="purple-bg" id="title">
 
     <!-- Nav Bar -->
 
@@ -38,7 +38,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-bg" id="features">
 
     <h3>Feature1</h3>
     <p>Write soemthing here...</p>
@@ -54,7 +54,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="purple-bg" id="testimonials">
 
     <h2>Quote 1. Woof.</h2>
     <img src="images/dog-img.jpg" >
@@ -69,7 +69,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="purple-bg" id="press">
     <img src="images/mtv-logo.png" >
     <img src="images/lbci-logo.png" >
   </section>
@@ -77,7 +77,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-bg" id="pricing">
 
     <h2>Packages</h2>
     <p>Something interesting here...</p>
@@ -112,7 +112,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="purple-bg" id="cta">
 
     <h3>The APP that your log needs.</h3>
     <button type="button">Download</button>
@@ -123,7 +123,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-bg" id="footer">
 
     <p>© Copyright SEF</p>
 
