Changed slogan's font

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 
     <!-- Title -->
 
-    <div>
-      <h1>Meet dog next door.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
+    <div class="row ">
+      <div class="col-lg-6 col-12">
+        <p class="slogan">Meet The Dog Next Door.</p>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+      </div>
     <div>
       <img src="images/app.png">
     </div>
