--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="row ">
       <div class="col-lg-6 col-12">
         <p class="slogan">Meet The Dog Next Door.</p>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
       </div>
     <div>
       <img src="images/app.png">
