tilted title image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
       </div>
     <div>
-      <img src="images/app.png">
+      <img class="title-image" src="images/app.png">
     </div>
 
   </section>
