--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
   <section class="purple-bg" id="title">
 
     <!-- Nav Bar -->
-
-
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+          <a class="navbar-brand" href="">Doggo Date</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link" aria-current="page" href="#footer">Contact</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
+              <a class="nav-link" href="#cta">Download</a>
+            </div>
+          </div>
+      </nav>
 
 
     <!-- Title -->
