Added features icons

--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
 
   <section class="white-bg" id="features">
 
+    <i class="feature-icon fas fa-check-circle fa-4x"></i>
     <h3>Feature1</h3>
     <p>Write soemthing here...</p>
 
+    <i class="feature-icon fas fa-map-marker-alt"></i>
     <h3>Feature2</h3>
     <p>Write soemthing here...</p>
 
+    <i class="feature-icon fas fa-heart fa-4x"></i>
     <h3>Feature3</h3>
     <p>Write soemthing here...</p>
 
