--- a/index.html
+++ b/index.html
@@ -53,17 +53,21 @@
 
   <section class="white-bg" id="features">
 
-    <i class="feature-icon fas fa-check-circle fa-4x"></i>
-    <h3 class="feature-title">Feature1</h3>
-    <p class="feature-text">Write soemthing here...</p>
-
-    <i class="feature-icon fas fa-map-marker-alt"></i>
-    <h3 class="feature-title">Feature2</h3>
-    <p class="feature-text">Write soemthing here...</p>
-
-    <i class="feature-icon fas fa-heart fa-4x"></i>
-    <h3 class="feature-title">Feature3</h3>
-    <p class="feature-text">Write soemthing here...</p>
+    <div class="col-lg-4 col-md-12"></div>
+      <i class="feature-icon fas fa-check-circle fa-4x"></i>
+      <h3 class="feature-title">Feature1</h3>
+      <p class="feature-text">Write something here...</p>
+    </div>
+    <div class="col-lg-4 col-md-12">
+      <i class="feature-icon fas fa-map-marker-alt"></i>
+      <h3 class="feature-title">Feature2</h3>
+      <p class="feature-text">Write something here...</p>
+    </div>
+    <div class="col-lg-4 col-md-12">
+      <i class="feature-icon fas fa-heart fa-4x"></i>
+      <h3 class="feature-title">Feature3</h3>
+      <p class="feature-text">Write something here...</p>
+    </div>
 
   </section>
 
