Added pricing table

--- a/index.html
+++ b/index.html
@@ -114,35 +114,64 @@
   <!-- Pricing -->
 
   <section class="white-bg" id="pricing">
+    <div class="container plans-intro">
+      <p class="plan-title">Packages</p>
+      <p class="plan-text">Something interesting here...</p>
+      <div class="row">
 
-    <h2>Packages</h2>
-    <p>Something interesting here...</p>
+        <div class="pricing-column col-12 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="plan-type">Basic</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price">Free</h2>
+              <div class="plan-details">
+                <p>5 Matches Per Day</p>
+                <p>10 Messages Per Day</p>
+                <p>Unlimited App Usage</p>
+              </div>
+              <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up For Free!</button>
+            </div>
+          </div>
+        </div>
 
+        <div class="pricing-column col-12 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="plan-type">Standard</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price">$29 / mo</h2>
+              <div class="plan-details">
+                <p>Unlimited Per Day</p>
+                <p>Unlimited Per Day</p>
+                <p>Unlimited App Usage</p>
+              </div>
+              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
 
-    <h3>Package 1</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Package 2</h3>
-    <h2>$29 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Package 3</h3>
-    <h2>$49 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+        <div class="pricing-column col-12 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="plan-type">Premium</h3>
+            </div>
+            <div class="card-body">
+              <h2 class="price">$49 / mo</h2>
+              <div class="plan-details">
+                <p>Priority Listing</p>
+                <p>Unlimited Per Day</p>
+                <p>Unlimited Per Day</p>
+                <p>Unlimited App Usage</p>
+              </div>
+              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
 
