--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
   <!-- Call to Action -->
 
   <section class="purple-bg" id="cta">
-
-    <h3>The APP that your log needs.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <div class="container-fluid">
+      <h3>The APP that your log needs.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+    </div>
   </section>
 
 
