Added social media icons in footer

--- a/index.html
+++ b/index.html
@@ -188,10 +188,15 @@
 
   <!-- Footer -->
 
-  <footer class="white-bg" id="footer">
+  <footer class="white-bg container-fluid text-center" id="footer">
+    <div class="socials">
+      <span> <i class="fab fa-twitter"></i> </span>
+      <span> <i class="fab fa-facebook-f"></i> </span>
+      <span> <i class="fab fa-instagram"></i> </span>
+      <span> <i class="fas fa-envelope"></i> </span>
+    </div>
 
-    <p>© Copyright SEF</p>
-
+    <p id="copyright">© Copyright 2022 SEF</p>
   </footer>
 
   <!--JS Links-->
