--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <body>
 
   <section class="purple-bg" id="title">
-
-    <!-- Nav Bar -->
     <div class="container-fluid">
+      <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="">Doggo Date</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,18 +33,19 @@
       </nav>
 
 
-    <!-- Title -->
+      <!-- Title -->
 
-    <div class="row ">
-      <div class="col-lg-6 col-12">
-        <p class="slogan">Meet The Dog Next Door.</p>
-        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+      <div class="row ">
+        <div class="col-lg-6 col-12">
+          <p class="slogan">Meet The Dog Next Door.</p>
+          <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+        </div>
+        <div>
+        <img class="title-image" src="images/app.png">
+        </div>
       </div>
-    <div>
-      <img class="title-image" src="images/app.png">
     </div>
-
   </section>
 
 
@@ -203,5 +203,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
