Put the title img in a container fluid

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div>
-        <img class="title-image" src="images/app.png">
+        <div class="col-12 col-lg-6">
+          <img class="title-image" src="images/app.png" alt="mobile app phone img">
         </div>
       </div>
     </div>
