Added BETA logo

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
   <!-- Press -->
 
   <section class="purple-bg" id="press">
-    <img src="images/mtv-logo.png" >
-    <img src="images/lbci-logo.png" >
+    <img src="images/mtv-logo.png" alt="MTV Lebanon logo">
+    <img src="images/BETA-logo.png" alt="BETA logo">
   </section>
 
 
