Added new testimonial

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <div class="carousel-inner">
 
         <div class="container-fluid carousel-item active">
-          <p class="testimonial-text">Quote 1. Woof.</p>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="Dog pic"/>
-          <em>Beirut, Lebanon</em>
+          <p class="testimonial-text">This has been me ever since I met Ella. A happy pup.</p>
+          <img class="testimonial-image" src="images/Happy-pup.jpg" alt="Happy dog"/>
+          <em class="testimonial-location">Leo, Beirut</em>
         </div>
 
         <div class="container-fluid carousel-item">
@@ -106,8 +106,8 @@
   <!-- Press -->
 
   <section class="purple-bg" id="press">
-    <img src="images/mtv-logo.png" alt="MTV Lebanon logo">
-    <img src="images/BETA-logo.png" alt="BETA logo">
+    <img class="press-logo" src="images/mtv-logo.png" alt="MTV Lebanon logo">
+    <img class="press-logo" src="images/BETA-logo.png" alt="BETA logo">
   </section>
 
 
