Changed 2nd testimonial

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         </div>
 
         <div class="container-fluid carousel-item">
-          <p class="testimonial-text">Quote 2. Woof.</p>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="Dog pic">
-          <em>Beirut, Lebanon</em>
+          <p class="testimonial-text">Too cool to settle down, but I think I finally found the one.</p>
+          <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
+          <em class="testimonial-location">Simba, Tripoli</em>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carousel-testimonials" data-bs-slide="prev">
