Changed pricing intro

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
   <section class="white-bg" id="pricing">
     <div class="container plans-intro">
-      <p class="plan-title">Packages</p>
-      <p class="plan-text">Something interesting here...</p>
+      <p class="plan-title">Plans</p>
+      <p class="plan-text">Sexy doggo? Go for Premium!</p>
       <div class="row">
 
         <div class="pricing-column col-12 col-lg-4">
