Changed font and padding for CTA title

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 
   <section class="purple-bg" id="cta">
     <div class="container-fluid">
-      <h3>The APP that your log needs.</h3>
+      <p class="cta-msg1"> The APP that your dog NEEDS.</p>
+      <p class="cta-msg2"> (Thank us once you meet your grandchildren)</p>
       <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
     </div>
