--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@
     <div class="container-fluid">
       <p class="cta-msg1"> The APP that your dog NEEDS.</p>
       <p class="cta-msg2"> (Thank us once you meet your grandchildren)</p>
-      <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+      <div class="text-center">
+        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+      </div>
     </div>
   </section>
 
