--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="container-fluid carousel-item">
-          <p class="testimonial-text">Too cool to settle down, but I think I finally found the one.</p>
+          <p class="testimonial-text">Always thought I was too cool to settle down, but I finally found the one.</p>
           <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
           <em class="testimonial-location">Simba, Tripoli</em>
         </div>
