--- a/index.html
+++ b/index.html
@@ -52,23 +52,25 @@
   <!-- Features -->
 
   <section class="white-bg" id="features">
-
-    <div class="col-lg-4 col-md-12"></div>
-      <i class="feature-icon fas fa-check-circle fa-4x"></i>
-      <h3 class="feature-title">Feature1</h3>
-      <p class="feature-text">Write something here...</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-12">
+          <i class="feature-icon fas fa-check-circle fa-4x"></i>
+          <h3 class="feature-title">Feature1</h3>
+          <p class="feature-text">Write something here...</p>
+        </div>
+        <div class="col-lg-4 col-md-12">
+          <i class="feature-icon fas fa-map-marker-alt"></i>
+          <h3 class="feature-title">Feature2</h3>
+          <p class="feature-text">Write something here...</p>
+        </div>
+        <div class="col-lg-4 col-md-12">
+          <i class="feature-icon fas fa-heart fa-4x"></i>
+          <h3 class="feature-title">Feature3</h3>
+          <p class="feature-text">Write something here...</p>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-4 col-md-12">
-      <i class="feature-icon fas fa-map-marker-alt"></i>
-      <h3 class="feature-title">Feature2</h3>
-      <p class="feature-text">Write something here...</p>
-    </div>
-    <div class="col-lg-4 col-md-12">
-      <i class="feature-icon fas fa-heart fa-4x"></i>
-      <h3 class="feature-title">Feature3</h3>
-      <p class="feature-text">Write something here...</p>
-    </div>
-
   </section>
 
 
@@ -99,7 +101,6 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
   </section>
 
 
