--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
       <div class="row">
         <div class="col-lg-4 col-md-12">
           <i class="feature-icon fas fa-check-circle fa-4x"></i>
-          <h3 class="feature-title">Feature1</h3>
+          <h3 class="feature-title">Simple</h3>
           <p class="feature-text">Write something here...</p>
         </div>
         <div class="col-lg-4 col-md-12">
           <i class="feature-icon fas fa-map-marker-alt"></i>
-          <h3 class="feature-title">Feature2</h3>
+          <h3 class="feature-title">Proximity Tracker</h3>
           <p class="feature-text">Write something here...</p>
         </div>
         <div class="col-lg-4 col-md-12">
           <i class="feature-icon fas fa-heart fa-4x"></i>
-          <h3 class="feature-title">Feature3</h3>
+          <h3 class="feature-title">No-hate Policy</h3>
           <p class="feature-text">Write something here...</p>
         </div>
       </div>
