--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         <div class="col-lg-4 col-md-12">
           <i class="feature-icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Simple</h3>
-          <p class="feature-text">Write something here...</p>
+          <p class="feature-text">You'll set up a profile in no time!</p>
         </div>
         <div class="col-lg-4 col-md-12">
           <i class="feature-icon fas fa-map-marker-alt"></i>
           <h3 class="feature-title">Proximity Tracker</h3>
-          <p class="feature-text">Write something here...</p>
+          <p class="feature-text">Because long-distance relationships are HARD...</p>
         </div>
         <div class="col-lg-4 col-md-12">
           <i class="feature-icon fas fa-heart fa-4x"></i>
           <h3 class="feature-title">No-hate Policy</h3>
-          <p class="feature-text">Write something here...</p>
+          <p class="feature-text">But cat people will be removed. <br/> Sorry not sorry.</p>
         </div>
       </div>
     </div>
