Centered top buttons on small screens

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
       <!-- Title -->
 
       <div class="row ">
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-6">
           <p class="slogan">Meet The Dog Next Door.</p>
-          <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+          <div class="top-buttons">
+            <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+            <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+          </div>
         </div>
         <div class="col-12 col-lg-6">
           <img class="title-image" src="images/app.png" alt="mobile app phone img">
