--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="carousel-inner">
 
         <div class="container-fluid carousel-item active">
-          <p class="testimonial-text">This has been me ever since I met Ella. A happy pup.</p>
+          <p class="testimonial-text">This has been me ever since I met Ella. A very happy pup.</p>
           <img class="testimonial-image" src="images/Happy-pup.jpg" alt="Happy dog"/>
           <em class="testimonial-location">Leo, Beirut</em>
         </div>
