Added left quote to testimonial

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <section class="purple-bg" id="testimonials">
     <div id="carousel-testimonials" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
+        <i class="testimonial-icon-left fas fa-quote-left"></i> 
 
         <div class="container-fluid carousel-item active">
           <p class="testimonial-text">This has been me ever since I met Ella. A very happy pup.</p>
@@ -89,7 +90,7 @@
         </div>
 
         <div class="container-fluid carousel-item">
-          <p class="testimonial-text">Always thought I was too cool to settle down, but I finally found the one.</p>
+          <p class="testimonial-text"> Always thought I was too cool to settle down, but I finally found the one.</p>
           <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
           <em class="testimonial-location">Simba, Tripoli</em>
         </div>
