--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="container-fluid carousel-item">
-          <p class="testimonial-text"> Always thought I was too cool to settle down, but I finally found the one.</p>
+          <p class="testimonial-text"> I know I look too cool to settle down, but I finally found the one.</p>
           <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
           <em class="testimonial-location">Simba, Tripoli</em>
         </div>
