--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <p>10 Messages Per Day</p>
                 <p>Unlimited App Usage</p>
               </div>
-              <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up For Free!</button>
+              <button class="btn btn-lg btn-block btn-outline-dark button-margin" type="button">Sign Up For Free!</button>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
                 <p>Unlimited Per Day</p>
                 <p>Unlimited App Usage</p>
               </div>
-              <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+              <button class="btn btn-lg btn-block btn-dark button-margin" type="button">Sign Up</button>
             </div>
           </div>
         </div>
