Minor change to cta msg1

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <section class="purple-bg" id="cta">
     <div class="container-fluid">
-      <p class="cta-msg1"> The APP that your dog NEEDS.</p>
+      <p class="cta-msg1"> The App that your dog <i>NEEDS</i>.</p>
       <p class="cta-msg2"> (Thank us once you meet your grandchildren)</p>
       <div class="text-center">
         <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
