Made some text non-selectable

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section class="purple-bg" id="title">
     <div class="container-fluid">
       <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark noselect">
           <a class="navbar-brand" href="">Doggo Date</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
 
       <div class="row ">
         <div class="col-lg-6">
-          <p class="slogan">Meet The Dog Next Door.</p>
+          <p class="slogan noselect">Meet The Dog Next Door.</p>
           <div class="top-buttons">
             <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
@@ -86,13 +86,13 @@
         <div class="container-fluid carousel-item active">
           <p class="testimonial-text">This has been me ever since I met Ella. A very happy pup.</p>
           <img class="testimonial-image" src="images/Happy-pup.jpg" alt="Happy dog"/>
-          <em class="testimonial-location">Leo, Beirut</em>
+          <em class="testimonial-location">- Leo, Beirut</em>
         </div>
 
         <div class="container-fluid carousel-item">
           <p class="testimonial-text"> I know I look too cool to settle down, but I finally found the one.</p>
           <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
-          <em class="testimonial-location">Simba, Tripoli</em>
+          <em class="testimonial-location"> - Simba, Tripoli</em>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carousel-testimonials" data-bs-slide="prev">
@@ -183,8 +183,8 @@
 
   <section class="purple-bg" id="cta">
     <div class="container-fluid">
-      <p class="cta-msg1"> The App that your dog <i>NEEDS</i>.</p>
-      <p class="cta-msg2"> (Thank us once you meet your grandchildren)</p>
+      <p class="cta-msg1 noselect"> The App that your dog <i>NEEDS</i>.</p>
+      <p class="cta-msg2 noselect"> (Thank us once you meet your grandchildren)</p>
       <div class="text-center">
         <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
@@ -195,7 +195,7 @@
 
   <!-- Footer -->
 
-  <footer class="white-bg container-fluid text-center" id="footer">
+  <footer class="white-bg container-fluid text-center noselect" id="footer">
     <div class="socials">
       <span> <i class="fab fa-twitter"></i> </span>
       <span> <i class="fab fa-facebook-f"></i> </span>
