Added icons in the pricing cards

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
             <div class="card-body">
               <h2 class="price">Free</h2>
               <div class="plan-details">
-                <p>5 Matches Per Day</p>
-                <p>10 Messages Per Day</p>
-                <p>Unlimited App Usage</p>
+                <p><i class="fas fa-paw price-icon"></i>5 Matches Per Day</p>
+                <p><i class="far fa-envelope price-icon"></i>10 Messages Per Day</p>
+                <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
               <button class="btn btn-lg btn-block btn-outline-dark button-margin" type="button">Sign Up For Free!</button>
             </div>
@@ -148,9 +148,9 @@
             <div class="card-body">
               <h2 class="price">$29 / mo</h2>
               <div class="plan-details">
-                <p>Unlimited Per Day</p>
-                <p>Unlimited Per Day</p>
-                <p>Unlimited App Usage</p>
+                <p> <i class="fas fa-paw price-icon"></i> Unlimited Matches Per Day</p>
+                <p> <i class="far fa-envelope price-icon"></i>Unlimited Messages Per Day</p>
+                <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
               <button class="btn btn-lg btn-block btn-dark button-margin" type="button">Sign Up</button>
             </div>
@@ -165,10 +165,10 @@
             <div class="card-body">
               <h2 class="price">$49 / mo</h2>
               <div class="plan-details">
-                <p>Priority Listing</p>
-                <p>Unlimited Per Day</p>
-                <p>Unlimited Per Day</p>
-                <p>Unlimited App Usage</p>
+                <p><i class="fas fa-paw price-icon"></i>Unlimited Matches Per Day</p>
+                <p><i class="far fa-envelope price-icon"></i>Unlimited Messages Per Day</p>
+                <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
+                <p><i class="fas fa-star price-icon"></i>Priority Listing</p>
               </div>
               <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
             </div>
