--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <div class="card-body">
               <h2 class="price">Free</h2>
               <div class="plan-details">
-                <p><i class="fas fa-paw price-icon"></i>5 Matches Per Day</p>
-                <p><i class="far fa-envelope price-icon"></i>10 Messages Per Day</p>
+                <p><i class="fas fa-paw price-icon"></i>5 Matches / day</p>
+                <p><i class="far fa-envelope price-icon"></i>10 Messages / day</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
               <button class="btn btn-lg btn-block btn-outline-dark button-margin" type="button">Sign Up For Free!</button>
@@ -148,8 +148,8 @@
             <div class="card-body">
               <h2 class="price">$29 / mo</h2>
               <div class="plan-details">
-                <p> <i class="fas fa-paw price-icon"></i> Unlimited Matches Per Day</p>
-                <p> <i class="far fa-envelope price-icon"></i>Unlimited Messages Per Day</p>
+                <p> <i class="fas fa-paw price-icon"></i> Unlimited Matches / day</p>
+                <p> <i class="far fa-envelope price-icon"></i>Unlimited Messages / day</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
               <button class="btn btn-lg btn-block btn-dark button-margin" type="button">Sign Up</button>
@@ -165,8 +165,8 @@
             <div class="card-body">
               <h2 class="price">$49 / mo</h2>
               <div class="plan-details">
-                <p><i class="fas fa-paw price-icon"></i>Unlimited Matches Per Day</p>
-                <p><i class="far fa-envelope price-icon"></i>Unlimited Messages Per Day</p>
+                <p><i class="fas fa-paw price-icon"></i>Unlimited Matches / day</p>
+                <p><i class="far fa-envelope price-icon"></i>Unlimited Messages / day</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
                 <p><i class="fas fa-star price-icon"></i>Priority Listing</p>
               </div>
