--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse text-center" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="#footer">Contact</a>
               <a class="nav-link" href="#pricing">Pricing</a>
@@ -148,8 +148,8 @@
             <div class="card-body">
               <h2 class="price">$29 / mo</h2>
               <div class="plan-details">
-                <p> <i class="fas fa-paw price-icon"></i> Unlimited Matches / day</p>
-                <p> <i class="far fa-envelope price-icon"></i>Unlimited Messages / day</p>
+                <p> <i class="fas fa-paw price-icon"></i> Unlimited Matches</p>
+                <p> <i class="far fa-envelope price-icon"></i>Unlimited Messages</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
               <button class="btn btn-lg btn-block btn-dark button-margin" type="button">Sign Up</button>
@@ -165,8 +165,8 @@
             <div class="card-body">
               <h2 class="price">$49 / mo</h2>
               <div class="plan-details">
-                <p><i class="fas fa-paw price-icon"></i>Unlimited Matches / day</p>
-                <p><i class="far fa-envelope price-icon"></i>Unlimited Messages / day</p>
+                <p><i class="fas fa-paw price-icon"></i>Unlimited Matches</p>
+                <p><i class="far fa-envelope price-icon"></i>Unlimited Messages</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
                 <p><i class="fas fa-star price-icon"></i>Priority Listing</p>
               </div>
@@ -207,7 +207,6 @@
   </footer>
 
   <!--JS Links-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
