--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <p class="plan-text">Sexy doggo? Go for Premium!</p>
       <div class="row">
 
-        <div class="pricing-column col-12 col-lg-4">
+        <div class="pricing-column col-12 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3 class="plan-type">Basic</h3>
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="pricing-column col-12 col-lg-4">
+        <div class="pricing-column col-12 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3 class="plan-type">Standard</h3>
