Added button spacing

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <!-- Title -->
 
       <div class="row ">
-        <div class="col-lg-6">
+        <div class="col-sm-12 col-lg-6">
           <p class="slogan noselect">Meet The Dog Next Door.</p>
           <div class="top-buttons">
-            <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+            <button type="button" class="btn btn-dark btn-lg download-button button-space"> <i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
           </div>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-sm-12 col-lg-6">
           <img class="title-image" src="images/app.png" alt="mobile app phone img">
         </div>
       </div>
@@ -56,17 +56,17 @@
   <section class="white-bg" id="features">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-4 col-md-12">
+        <div class="col-sm-12 col-lg-4">
           <i class="feature-icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Simple</h3>
           <p class="feature-text">You'll set up a profile in no time!</p>
         </div>
-        <div class="col-lg-4 col-md-12">
+        <div class="col-sm-12 col-lg-4">
           <i class="feature-icon fas fa-map-marker-alt"></i>
           <h3 class="feature-title">Proximity Tracker</h3>
           <p class="feature-text">Because long-distance relationships are HARD...</p>
         </div>
-        <div class="col-lg-4 col-md-12">
+        <div class="col-sm-12 col-lg-4">
           <i class="feature-icon fas fa-heart fa-4x"></i>
           <h3 class="feature-title">No-hate Policy</h3>
           <p class="feature-text">But cat people will be removed. <br/> Sorry not sorry.</p>
@@ -123,7 +123,7 @@
       <p class="plan-text">Sexy doggo? Go for Premium!</p>
       <div class="row">
 
-        <div class="pricing-column col-12 col-md-6 col-lg-4">
+        <div class="pricing-column col-sm-12 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3 class="plan-type">Basic</h3>
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="pricing-column col-12 col-md-6 col-lg-4">
+        <div class="pricing-column col-sm-12 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3 class="plan-type">Standard</h3>
@@ -157,7 +157,7 @@
           </div>
         </div>
 
-        <div class="pricing-column col-12 col-lg-4">
+        <div class="pricing-column col-sm-12 col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3 class="plan-type">Premium</h3>
@@ -185,8 +185,8 @@
     <div class="container-fluid">
       <p class="cta-msg1 noselect"> The App that your dog <i>NEEDS</i>.</p>
       <p class="cta-msg2 noselect"> (Thank us once you meet your grandchildren)</p>
-      <div class="text-center">
-        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+      <div class="text-center button-margin-top">
+        <button type="button" class="btn btn-dark btn-lg download-button button-space"> <i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
       </div>
     </div>
