Changed buttons properties

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-sm-12 col-lg-6">
           <p class="slogan noselect">Meet The Dog Next Door.</p>
           <div class="top-buttons">
-            <button type="button" class="btn btn-dark btn-lg download-button button-space"> <i class="fab fa-apple"></i> Download</button>
+            <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
             <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
           </div>
         </div>
@@ -185,8 +185,8 @@
     <div class="container-fluid">
       <p class="cta-msg1 noselect"> The App that your dog <i>NEEDS</i>.</p>
       <p class="cta-msg2 noselect"> (Thank us once you meet your grandchildren)</p>
-      <div class="text-center button-margin-top">
-        <button type="button" class="btn btn-dark btn-lg download-button button-space"> <i class="fab fa-apple"></i> Download</button>
+      <div class="text-center">
+        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
       </div>
     </div>
