--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <p><i class="far fa-envelope price-icon"></i>10 Messages / day</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
-              <button class="btn btn-lg btn-block btn-outline-dark button-margin" type="button">Sign Up For Free!</button>
+              <button class="btn btn-lg btn-block btn-outline-dark btn-top-margin" type="button">Sign Up For Free!</button>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
                 <p> <i class="far fa-envelope price-icon"></i>Unlimited Messages</p>
                 <p><i class="fas fa-mobile-alt price-icon"></i>Unlimited App Usage</p>
               </div>
-              <button class="btn btn-lg btn-block btn-dark button-margin" type="button">Sign Up</button>
+              <button class="btn btn-lg btn-block btn-dark btn-top-margin" type="button">Sign Up</button>
             </div>
           </div>
         </div>
