Bolded testimonial names

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
         <div class="container-fluid carousel-item active">
           <p class="testimonial-text">This has been me ever since I met Ella. A very happy pup.</p>
           <img class="testimonial-image" src="images/Happy-pup.jpg" alt="Happy dog"/>
-          <em class="testimonial-location">- Leo, Beirut</em>
+          <em class="testimonial-location">- <b>Leo</b>, Beirut</em>
         </div>
 
         <div class="container-fluid carousel-item">
           <p class="testimonial-text"> I know I look too cool to settle down, but I finally found the one.</p>
           <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
-          <em class="testimonial-location"> - Simba, Tripoli</em>
+          <em class="testimonial-location"> - <b>Simba</b>, Tripoli</em>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carousel-testimonials" data-bs-slide="prev">
