--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -32,7 +31,6 @@
           </div>
       </nav>
 
-
       <!-- Title -->
 
       <div class="row ">
@@ -49,7 +47,6 @@
       </div>
     </div>
   </section>
-
 
   <!-- Features -->
 
@@ -88,13 +85,13 @@
           <img class="testimonial-image" src="images/Happy-pup.jpg" alt="Happy dog"/>
           <em class="testimonial-location">- <b>Leo</b>, Beirut</em>
         </div>
-
         <div class="container-fluid carousel-item">
           <p class="testimonial-text"> I know I look too cool to settle down, but I finally found the one.</p>
           <img class="testimonial-image" src="images/cool dog.jpg" alt="Dog with sunglasses">
           <em class="testimonial-location"> - <b>Simba</b>, Tripoli</em>
         </div>
       </div>
+
       <button class="carousel-control-prev" type="button" data-bs-target="#carousel-testimonials" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -121,8 +118,8 @@
     <div class="container plans-intro">
       <p class="plan-title">Plans</p>
       <p class="plan-text">Sexy doggo? Go for Premium!</p>
-      <div class="row">
 
+      <div class="row">
         <div class="pricing-column col-sm-12 col-md-6 col-lg-4">
           <div class="card">
             <div class="card-header">
@@ -202,11 +199,10 @@
       <span> <i class="fab fa-instagram"></i> </span>
       <span> <i class="fas fa-envelope"></i> </span>
     </div>
-
     <p id="copyright">© Copyright 2022 SEF</p>
   </footer>
 
-  <!--JS Links-->
+  <!--JS Link-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
