--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <div class="row ">
         <div class="col-sm-12 col-lg-6">
           <p class="slogan noselect">Meet The Dog Next Door.</p>
-          <div class="top-buttons">
-            <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
-            <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+          <div class="top-btn">
+            <button type="button" class="btn btn-dark btn-lg"> <i class="fab fa-apple"></i> Download</button>
+            <button type="button" class="btn btn-outline-light btn-lg"> <i class="fab fa-google-play"></i> Download</button>
           </div>
         </div>
         <div class="col-sm-12 col-lg-6">
@@ -183,8 +183,8 @@
       <p class="cta-msg1 noselect"> The App that your dog <i>NEEDS</i>.</p>
       <p class="cta-msg2 noselect"> (Thank us once you meet your grandchildren)</p>
       <div class="text-center">
-        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+        <button type="button" class="btn btn-dark btn-lg bottom-btn"> <i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg download-button bottom-btn"> <i class="fab fa-google-play"></i> Download</button>
       </div>
     </div>
   </section>
